--- a/index.html
+++ b/index.html
@@ -14,11 +14,21 @@
 <body class="container">
 
 <div class="sidebar">
-    Sidebar
+    <button class="nav-btn"></button>
 </div>
 
 <header class="header">
-    Header
+    <img src="img/logo.png" alt="Nexter logo" class="header__logo">
+    <h3 class="heading-3">Your own home:</h3>
+    <h1 class="heading-1">The ultimate personal freedom</h1>
+    <button class="btn header__btn">View our properties</button>
+    <div class="header__seenon-text">Seen on</div>
+    <div class="header__seenon-logos">
+        <img src="img/logo-bbc.png" alt="Seen on logo 1">
+        <img src="img/logo-forbes.png" alt="Seen on logo 2">
+        <img src="img/logo-techcrunch.png" alt="Seen on logo 3">
+        <img src="img/logo-bi.png" alt="Seen on logo 4">
+    </div>
 </header>
 
 <div class="realtors">
@@ -105,7 +115,7 @@
 
 <section class="homes">
     <div class="home">
-        <img src="img/house-1.jpeg" alt="House 1" class="home__img">
+        <img alt="House 1" class="home__img" src="img/house-1.jpeg">
         <svg class="home__like">
             <use xlink:href="img/sprite.svg#icon-heart-full"></use>
         </svg>
@@ -139,7 +149,7 @@
 
 
     <div class="home">
-        <img src="img/house-2.jpeg" alt="House 2" class="home__img">
+        <img alt="House 2" class="home__img" src="img/house-2.jpeg">
         <svg class="home__like">
             <use xlink:href="img/sprite.svg#icon-heart-full"></use>
         </svg>
@@ -172,7 +182,7 @@
     </div>
 
     <div class="home">
-        <img src="img/house-3.jpeg" alt="House 3" class="home__img">
+        <img alt="House 3" class="home__img" src="img/house-3.jpeg">
         <svg class="home__like">
             <use xlink:href="img/sprite.svg#icon-heart-full"></use>
         </svg>
@@ -205,7 +215,7 @@
     </div>
 
     <div class="home">
-        <img src="img/house-4.jpeg" alt="House 4" class="home__img">
+        <img alt="House 4" class="home__img" src="img/house-4.jpeg">
         <svg class="home__like">
             <use xlink:href="img/sprite.svg#icon-heart-full"></use>
         </svg>
@@ -238,7 +248,7 @@
     </div>
 
     <div class="home">
-        <img src="img/house-5.jpeg" alt="House 5" class="home__img">
+        <img alt="House 5" class="home__img" src="img/house-5.jpeg">
         <svg class="home__like">
             <use xlink:href="img/sprite.svg#icon-heart-full"></use>
         </svg>
@@ -271,7 +281,7 @@
     </div>
 
     <div class="home">
-        <img src="img/house-6.jpeg" alt="House 6" class="home__img">
+        <img alt="House 6" class="home__img" src="img/house-6.jpeg">
         <svg class="home__like">
             <use xlink:href="img/sprite.svg#icon-heart-full"></use>
         </svg>
@@ -305,11 +315,60 @@
 
 </section>
 <section class="gallery">
-    Gallery
+    <figure class="gallery__item gallery__item--1">
+        <img alt="" class="gallery__img" src="img/gal-1.jpeg">
+    </figure>
+    <figure class="gallery__item gallery__item--2">
+        <img alt="" class="gallery__img" src="img/gal-2.jpeg">
+    </figure>
+    <figure class="gallery__item gallery__item--3">
+        <img alt="" class="gallery__img" src="img/gal-3.jpeg">
+    </figure>
+    <figure class="gallery__item gallery__item--4">
+        <img alt="" class="gallery__img" src="img/gal-4.jpeg">
+    </figure>
+    <figure class="gallery__item gallery__item--5">
+        <img alt="" class="gallery__img" src="img/gal-5.jpeg">
+    </figure>
+    <figure class="gallery__item gallery__item--6">
+        <img alt="" class="gallery__img" src="img/gal-6.jpeg">
+    </figure>
+    <figure class="gallery__item gallery__item--7">
+        <img alt="" class="gallery__img" src="img/gal-7.jpeg">
+    </figure>
+    <figure class="gallery__item gallery__item--8">
+        <img alt="" class="gallery__img" src="img/gal-8.jpeg">
+    </figure>
+    <figure class="gallery__item gallery__item--9">
+        <img alt="" class="gallery__img" src="img/gal-9.jpeg">
+    </figure>
+    <figure class="gallery__item gallery__item--10">
+        <img alt="" class="gallery__img" src="img/gal-10.jpeg">
+    </figure>
+    <figure class="gallery__item gallery__item--11">
+        <img alt="" class="gallery__img" src="img/gal-11.jpeg">
+    </figure>
+    <figure class="gallery__item gallery__item--12">
+        <img alt="" class="gallery__img" src="img/gal-12.jpeg">
+    </figure>
+    <figure class="gallery__item gallery__item--13">
+        <img alt="" class="gallery__img" src="img/gal-13.jpeg">
+    </figure>
+    <figure class="gallery__item gallery__item--14">
+        <img alt="" class="gallery__img" src="img/gal-14.jpeg">
+    </figure>
 </section>
 
 <footer class="footer">
-    Footer
+        <ul  class="nav">
+            <li class="nav__item"><a class="nav__link" href="#">Find your dream home</a></li>
+            <li class="nav__item"><a class="nav__link" href="#">Request proposal</a></li>
+            <li class="nav__item"><a class="nav__link" href="#">Download home planner</a></li>
+            <li class="nav__item"><a class="nav__link" href="#">Contact us</a></li>
+            <li class="nav__item"><a class="nav__link" href="#">Submit your property</a></li>
+            <li class="nav__item"><a class="nav__link" href="#">Come work with us!</a></li>
+        </ul>
+    <p class="copyright">&copy; Copyright 2020 by Adrian Sutkowski</p>
 </footer>
 
 </body>
